<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title -->
        <TextView
            android:id="@+id/report_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/report_user"
            android:textColor="@color/teal_light"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/report_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/report_user_sub"
            android:textColor="@color/text_secondary"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/report_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- OPTIONS LIST -->
        <RadioGroup
            android:id="@+id/report_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/report_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/option_inappropriate"
                style="@style/NeonRadioButton"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/opt_inappropriate" />

            <RadioButton
                android:id="@+id/option_bullying"
                style="@style/NeonRadioButton"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:checked="true"
                android:text="@string/opt_bullying" />

            <RadioButton
                android:id="@+id/option_spam"
                style="@style/NeonRadioButton"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/opt_spam" />

            <RadioButton
                android:id="@+id/option_impersonation"
                style="@style/NeonRadioButton"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/opt_impersonation" />

            <RadioButton
                android:id="@+id/option_other"
                style="@style/NeonRadioButton"
                android:layout_width="match_parent"
                android:text="@string/opt_other" />
        </RadioGroup>

        <!-- Additional details label -->
        <TextView
            android:id="@+id/additional_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_details"
            android:textColor="@color/text_primary"
            android:textSize="17sp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@id/report_options"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Additional details box -->
        <EditText
            android:id="@+id/details_input"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="@drawable/neon_card"
            android:padding="14dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"
            android:hint="Enter more details..."
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/additional_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Submit button -->
        <RelativeLayout
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/submit_button_bg"
            app:layout_constraintTop_toBottomOf="@id/details_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="@color/background_dark"
                android:textSize="18sp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
